# amalgam

./: Makefile.am  README  amalgam.spec.in  autogen.sh  configure.ac
doc/: Makefile.am  fileformat.txt
src/: Makefile.am
src/amalgambuild/: Makefile.am  amalgambuild.c
src/amalgamfs/: Makefile.am  amalgamfs.c  amalgamfs.h  main.c
src/amalgaminfo/: Makefile.am  amalgaminfo.c
src/libamalgam/: Makefile.am  amalgam.pc.in  tar.c  tar.h
